[package]
name = "agentsentry-gateway"
version = "0.1.0"
edition = "2021"
authors = ["Akav Labs <akavlabs@users.noreply.github.com>"]
license = "Apache-2.0"
description = "Transparent OpenAI-compatible security gateway for LLM agents: DLP, secret-leak, jailbreak and prompt-injection detection at the egress."
repository = "https://github.com/akav-labs/agentsentry-gateway"
homepage = "https://github.com/akav-labs/agentsentry-gateway"
keywords = ["llm", "security", "dlp", "gateway", "ai"]
categories = ["network-programming", "web-programming"]
readme = "README.md"
exclude = ["assets/", "demo.gif", "demo.cast", ".github/"]

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"], default-features = false }
regex = "1"
once_cell = "1"
unicode-normalization = "0.1"
sha2 = "0.10"
bytes = "1"
futures = "0.3"
prometheus = "0.14"

[profile.release]
lto = "thin"
strip = true
